*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5107 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -2,10 +2,10 @@
 <project name="kul-cfg-envs" default="init-database-properties" basedir=".">
 	<target name="init-database-properties">
 		<property file="${java.properties.file}" />
-		<condition property="database" value="oracle">
-			<equals arg1="${ojb.platform}" arg2="Oracle9i" />
+		<condition property="database" value="mysql">
+			<equals arg1="${ojb.platform}" arg2="MySQL" />
 		</condition>
-		<property name="database" value="mysql" />
+		<property name="database" value="oracle" />
 		<copy file="build.properties" tofile="runtime-build.properties" overwrite="true" />
 		<replaceregexp file="runtime-build.properties" match="${database}." replace="" byline="true" />
 		<loadproperties srcfile="runtime-build.properties" />
