*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5108 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,6 @@
-database.cvs.module.suffix=-cfg-dbs
-database.cvs.module=kul${database.cvs.module.suffix}
-application.database.cvs.module=${application}${database.cvs.module.suffix}
-application.database.xml=${database.cvs.module}/mds/*.xml
-application.database.docs=${database.working.directory}/doc/*.*
+application.database.xml=${application.database.cvs.module}/mds/*.xml
+application.database.docs=${application.database.cvs.module}/mds/doc/*.*
 application.database.incremental.file=${application.database.cvs.module}/incremental.sql
-
-user=${application}${environment}
-password=*******
 
 oracle.database=oracle
 oracle.driver=oracle.jdbc.OracleDriver
