--- a/build.xml
+++ b/build.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0"?>
 <project name="kul-cfg-envs" default="init-database-properties" basedir=".">
 	<target name="init-database-properties">
-		<property file="${java.properties.file}" />
 		<condition property="database" value="mysql">
 			<equals arg1="${ojb.platform}" arg2="MySQL" />
 		</condition>
 		<property name="database" value="oracle" />
-		<copy file="build.properties" tofile="runtime-build.properties" overwrite="true" />
-		<replaceregexp file="runtime-build.properties" match="${database}." replace="" byline="true" />
+		<replaceregexp file="${working.directory}/build.properties" match="${database}." replace="" byline="true" />
 		<loadproperties srcfile="runtime-build.properties" />
 		<loadproperties srcfile="impex.properties" />
+		<property name="impex.build.file" value="${base.directory}/${database.cvs.module}/impex/build.xml" />
 		<echoproperties />
 	</target>
-
-	<target name="export" depends="init-database-properties">
+	
+	<target name="checkout-database-project" depends="init-database-properties">
 		<cvspass cvs.root="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout ${database.cvs.module}" dest="${working.directory}" />
 		<cvs command="checkout ${application.database.cvs.module}" dest="${working.directory}" />
-		<delete dir="${working.directory}/${application.database.cvs.module}">
+	</target>
+	
+	<target name="delete-database-project" depends="init-database-properties">
+		<delete dir="${working.directory}" includeemptydirs="true">
+			<fileset includes="${application.database.cvs.module}/**/**" />
+		</delete>
+	</target>
+	
+	<target name="update-database-project" depends="checkout-database-project">
+		<delete dir="${working.directory}">
 			<fileset includes="${application.database.xml},${application.database.docs},${application.database.incremental.file}" />
 		</delete>
-		<ant antfile="${database.cvs.module}/impex/build.xml" target="export" />
-		<cvs command="add ${application.database.xml}" />
-		<cvs command="add ${application.database.docs}" />
-		<echo message="" file="${application.database.incremental.file}" />
-		<cvs command="add ${application.database.incremental.file}" />
-		<cvs command="add ${application.database.incremental.file}" />
-		<cvs command="update ${application.database.cvs.module}" />
-		<cvs command="commit ${application.database.cvs.module}" />
-		<delete dir="${working.directory}" includeemptydirs="true">
-			<fileset includes="${database.cvs.module}/**/**,${application.database.cvs.module}/**/**" />
-		</delete>
+		<ant antfile="${impex.build.file}" target="export" />
+		<cvs command="add ${working.directory}/${application.database.xml}" />
+		<cvs command="add ${working.directory}/${application.database.docs}" />
+		<echo message="" file="${working.directory}/${application.database.incremental.file}" />
+		<cvs command="add ${working.directory}/${application.database.incremental.file}" />
+		<cvs command="update ${working.directory}/${application.database.cvs.module}" />
+		<cvs command="commit ${working.directory}/${application.database.cvs.module}" />
 	</target>
 
-	<target name="import" depends="init-database-properties">
-		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout ${database.cvs.module}" dest="${working.directory}" />
-		<cvs command="checkout ${application.database.cvs.module}" dest="${working.directory}" tag="${tag}"/>
-		<ant antfile="${database.cvs.module}/impex/build.xml" target="empty-schema" />
-		<ant antfile="${database.cvs.module}/impex/build.xml" target="import" />
-		<delete dir="${working.directory}" includeemptydirs="true">
-			<fileset includes="${database.cvs.module}/**/**,${application.database.cvs.module}/**/**" />
-		</delete>
+	<target name="update-database" depends="checkout-database-project">
+		<ant antfile="${impex.build.file}" target="empty-schema" />
+		<ant antfile="${impex.build.file}" target="import" />
 	</target>
+
+	<target name="export" depends="update-database-project,delete-database-project" />
+
+	<target name="import" depends="update-database,delete-database-project" />
 </project>
