*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5112 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <project name="kul-cfg-envs" default="init-database-properties" basedir=".">
 	<target name="init-database-properties">
+		<loadproperties srcfile="${java.properties.file}" />
 		<condition property="database" value="mysql">
 			<equals arg1="${ojb.platform}" arg2="MySQL" />
 		</condition>
 		<property name="database" value="oracle" />
-		<replaceregexp file="${working.directory}/build.properties" match="${database}." replace="" byline="true" />
-		<loadproperties srcfile="${working.directory}/build.properties" />
+		<replaceregexp file="${database.properties.file}" match="${database}." replace="" byline="true" />
+		<loadproperties srcfile="${database.properties.file}" />
 		<loadproperties srcfile="${base.directory}/impex.properties" />
 		<property name="impex.build.file" value="${base.directory}/${database.cvs.module}/impex/build.xml" />
 		<echoproperties />
