*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5113 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
-application.database.xml=${application.database.cvs.module}/mds/*.xml
-application.database.docs=${application.database.cvs.module}/mds/doc/*.*
+torque.working.directory=${application.database.cvs.module}/mds
+application.database.xml=${torque.working.directory}/*.xml
+application.database.docs=${torque.working.directory}/doc/*.*
 application.database.incremental.file=${application.database.cvs.module}/incremental.sql
 
 oracle.database=oracle
