*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5114 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
 		<loadproperties srcfile="${database.properties.file}" />
 		<loadproperties srcfile="${base.directory}/impex.properties" />
 		<property name="impex.build.file" value="${base.directory}/${database.cvs.module}/impex/build.xml" />
+		<loadproperties srcfile="${tag.properties.file}" />
 		<echoproperties />
 	</target>
 	
