*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5116 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 	</target>
 	
 	<target name="checkout-database-project" depends="init-database-properties">
-		<cvspass cvs.root="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
+		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout ${application.database.cvs.module}" dest="${working.directory}" />
 	</target>
 	
