--- a/build.xml
+++ b/build.xml
@@ -16,12 +16,12 @@
 	
 	<target name="checkout-database-project" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
-		<cvs command="checkout ${application.database.cvs.module}" dest="${working.directory}" />
+		<cvs command="checkout ${application.database.cvs.module}" dest="${working.directory}/${application.database.cvs.module}" />
 	</target>
 	
 	<target name="delete-database-project" depends="init-database-properties">
-		<delete dir="${working.directory}" includeemptydirs="true">
-			<fileset includes="${application.database.cvs.module}/**/**" />
+		<delete dir="${working.directory}/${application.database.cvs.module}">
+			<fileset includes="**/**" />
 		</delete>
 	</target>
 	
