*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5119 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 
 torque.working.directory=${application.database.cvs.module}/mds
-application.database.xml=${torque.working.directory}/*.xml
-application.database.docs=${torque.working.directory}/doc/*.*
-application.database.incremental.file=${application.database.cvs.module}/incremental.sql
+application.database.xml=*.xml
+application.database.docs=doc/*
+application.database.incremental.file=incremental.sql
 
 oracle.database=oracle
 oracle.driver=oracle.jdbc.OracleDriver
