--- a/impex.properties
+++ b/impex.properties
@@ -2,7 +2,7 @@
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
 torque.project=${working.directory}/${torque.working.directory}
-drivers.directory = /usr/local/tomcat/kuali/common/lib
+drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 
 export.torque.database=${oracle.database}
