--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,31 @@
-
 torque.working.directory=${application.database.cvs.module}/mds
 application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
+# uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
+# import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
-oracle.database=oracle
-oracle.driver=oracle.jdbc.OracleDriver
-oracle.url=jdbc:oracle:thin:@esdb12-k.uits.indiana.edu:1521:KUALI
-mysql.database=mysql
-mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://wsa127.uits.indiana.edu:3306/${user}
+torque.home=${base.directory}/${database.cvs.module}/impex
+torque.project=${working.directory}/${torque.working.directory}
+drivers.directory=/usr/local/tomcat/kuali/common/lib
+drivers.file.pattern=ojdbc*.jar,mysql*.jar
+
+export.torque.database.schema=${schema}
+export.torque.database.user=${user}
+export.torque.database.password=${password}
+
+import.torque.database.schema=${schema}
+import.torque.database.user=${user}
+import.torque.database.password=${password}
+
+oracle.usermaint.user=SYSTEM
+oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${import.torque.database.user}' ); END;
+oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${import.torque.database.user}', '${import.torque.database.password}' ); END;
+oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${import.torque.database.user}' ); END;
+mysql.create.user.command=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY PASSWORD '${import.torque.database.password}'
+mysql.grant.command=GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION
+mysql.create.user.commands=${mysql.create.user.command}\n\
+/\n\
+${mysql.grant.command}
+mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${import.torque.database.schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
+mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${import.torque.database.schema}
