--- a/build.xml
+++ b/build.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0"?>
 <project name="kul-cfg-envs" default="init-database-properties" basedir=".">
-	<target name="init-database-properties">
+	<target name="init-java-properties">
 		<property file="${java.properties.file}" />
-		<condition property="database" value="${mysql.database}">
+		<condition property="import.into.mysql">
 			<equals arg1="${ojb.platform}" arg2="MySQL" />
 		</condition>
-		<condition property="driver" value="${mysql.driver}">
-			<equals arg1="${database}" arg2="${mysql.database}" />
-		</condition>
-		<condition property="url" value="${mysql.url}">
-			<equals arg1="${database}" arg2="${mysql.database}" />
-		</condition>
-		<property name="database" value="${oracle.database}" />
-		<property name="driver" value="${oracle.driver}" />
-		<property name="url" value="${oracle.url}" />
+	</target>
+	
+	<target name="init-mysql-properties" depends="init-java-properties" if="import.into.mysql">
+		<property file="${base.directory}/mysql-impex.properties" />
+	</target>
+
+	<target name="init-database-properties" depends="init-mysql-properties">
+		<property file="${base.directory}/oracle-impex.properties" />
 		<property file="${database.properties.file}" />
-		<property file="${base.directory}/impex.properties" />
-		<property name="impex.build.file" value="${base.directory}/${database.cvs.module}/impex/build.xml" />
+		<property file="${base.directory}/build.properties" />
+		<property name="impex.build.file" value="${torque.home}/build.xml" />
 		<property file="${tag.properties.file}" />
 		<echoproperties />
 	</target>
-	
+		
 	<target name="checkout-database-project" depends="init-database-properties">
 		<cvspass cvsroot="${project.cvs.root}" password="${project.cvs.anonpassword}" passfile="${user.home}/.cvspass" />
 		<cvs command="checkout ${application.database.cvs.module}" dest="${working.directory}" />
