*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7022 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -105,6 +105,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
     centralize them and clean up the targets.
   -->
 	<target name="inittasks">
+		<echoproperties />
 		<mkdir dir="${torque.schema.dir}" />
 		<path id="torque-classpath">
 			<pathelement location="kuali-impextasks.jar" />
