--- a/impex/build.xml
+++ b/impex/build.xml
@@ -82,6 +82,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	</target>
 	
 	<target name="init-properties">
+		<echoproperties />
 		<property name="torque.contextProperties" value="build.properties" />
 		<property file="${user.home}/impex-build.properties" />
 		<property file="build.properties" />
