*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5126 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 
 torque.working.directory=${application.database.cvs.module}/mds
+torque.useClasspath=false
 application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
