*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5127 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,5 @@
 
 torque.working.directory=${application.database.cvs.module}/mds
-torque.useClasspath=false
 application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
@@ -8,6 +7,7 @@ application.database.incremental.file=incremental.sql
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
 torque.home=${base.directory}/${database.cvs.module}/impex
+torque.lib.dir=${torque.home}/lib
 torque.project=${working.directory}/${torque.working.directory}
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
