*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7026 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -107,7 +107,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	<target name="inittasks">
 		<mkdir dir="${torque.schema.dir}" />
 		<path id="torque-classpath">
-			<pathelement location="kuali-impextasks.jar" />
+			<pathelement location="${torque.home}/kuali-impextasks.jar" />
 			<fileset dir="${torque.lib.dir}" includes="*.jar" />
 			<fileset dir="${drivers.directory}" includes="${drivers.file.pattern}" />
 		</path>
