--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,7 @@
 		<delete>
 			<fileset dir="${working.directory}/${torque.working.directory}" includes="${application.database.xml},${application.database.docs}.css,${application.database.docs}.html,${application.database.incremental.file}" />
 		</delete>
-		<ant antfile="${impex.build.file}" target="export" />
+		<ant antfile="${impex.build.file}" target="export" inheritall="true" inheritrefs="true" />
 		<cvs command="add ${working.directory}/${application.database.xml}" />
 		<cvs command="add ${working.directory}/${application.database.docs}" />
 		<echo message="" file="${working.directory}/${application.database.incremental.file}" />
