*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7027 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -516,6 +516,13 @@ Please place the jar file for this class in the lib directory and try again.
 	</target>
 
 	<target name="check-export-properties" depends="inittasks">
+		<echo message="export.torque.database: ${export.torque.database}"/>
+		<echo message="export.torque.database.driver: ${export.torque.database.driver}"/>
+		<echo message="export.torque.database.url: ${export.torque.database.url}"/>
+		<echo message="export.torque.database.user: ${export.torque.database.user}"/>
+		<echo message="export.torque.database.schema: ${export.torque.database.schema}"/>
+		<echo message="export.torque.database.password: ${export.torque.database.password}"/>
+
 		<condition property="export.properties.set">
 			<and>
 				<isset property="export.torque.database"/>
