*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5129 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,7 @@
 
 	<target name="init-database-properties" depends="init-mysql-properties">
 		<property file="${base.directory}/oracle-impex.properties" />
+		<echoproperties />
 		<property file="${database.properties.file}" />
 		<property file="${base.directory}/build.properties" />
 		<property name="impex.build.file" value="${torque.home}/build.xml" />
