*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7028 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -286,7 +286,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		                       outputFile="${torque.schema.absolute.dir}/schema.xml"
 		                       sameJavaName="${torque.sameJavaName}"
 		/>
-		<copy file="database.dtd" todir="${torque.schema.dir}" />
+		<copy file="{torque.home}/database.dtd" todir="${torque.schema.dir}" />
 	</target>
 
 	<!-- ================================================================ -->
