*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5133 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -24,10 +24,7 @@ oracle.usermaint.user=SYSTEM
 oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${import.torque.database.user}' ); END;
 oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${import.torque.database.user}', '${import.torque.database.password}' ); END;
 oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${import.torque.database.user}' ); END;
-mysql.create.user.command=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY PASSWORD '${import.torque.database.password}'
-mysql.grant.command=GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION
-mysql.create.user.commands=${mysql.create.user.command}\n\
-/\n\
-${mysql.grant.command}
+mysql.create.user.commands=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY PASSWORD '${import.torque.database.password}'\n/\
+GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION\n/
 mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${import.torque.database.schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
 mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${import.torque.database.schema}
