*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7031 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -358,7 +358,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<echo message="| Generating Data DTD for YOUR Torque project!  |" />
 		<echo message="|                                               |" />
 		<echo message="+-----------------------------------------------+" />
-
+		<echoproperties />
 		<torque-data-model contextProperties="${torque.contextProperties}"
 		                   controlTemplate="${torque.template.dataDtd}"
 		                   outputDirectory="${torque.schema.dir}"
