--- a/build.properties
+++ b/build.properties
@@ -21,10 +21,10 @@ import.torque.database.user=${user}
 import.torque.database.password=${password}
 
 oracle.usermaint.user=SYSTEM
-oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${import.torque.database.user}' ); END;
-oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${import.torque.database.user}', '${import.torque.database.password}' ); END;
-oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${import.torque.database.user}' ); END;
-mysql.create.user.commands=CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY PASSWORD '${import.torque.database.password}'\n/\
-GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION\n/
-mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${import.torque.database.schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
-mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${import.torque.database.schema}
+oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${user}' ); END;
+oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${user}', '${password}' ); END;
+oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${user}' ); END;
+mysql.create.user.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n///
+GRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
+mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
+mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${schema}
