--- a/build.properties
+++ b/build.properties
@@ -6,9 +6,7 @@ application.database.incremental.file=incremental.sql
 # uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
 # import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
-torque.home=${base.directory}/${database.cvs.module}/impex
-torque.lib.dir=${torque.home}/lib
-torque.project=${working.directory}/${torque.working.directory}
+torque.project=kfs
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 
