*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5136 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 
 	<target name="init-database-properties" depends="init-mysql-properties">
 		<property file="${base.directory}/oracle-impex.properties" />
-		<property name="impex.build.file" value="${torque.home}/build.xml" />
+		<property name="impex.build.file" value="${base.directory}/${database.cvs.module}/impex/build.xml" />
 		<property file="${tag.properties.file}" />
 	</target>
 		
