*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5137 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,16 @@
-
 torque.working.directory=${application.database.cvs.module}/mds
 application.database.xml=*.xml
 application.database.docs=doc/*
 application.database.incremental.file=incremental.sql
-# uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
-# import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
-torque.project=kfs
+torque.project=mds
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
+target.zip=../kuldemo.zip
+source.zip=../kuldemo.zip
+
+# uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
+# import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
 export.torque.database.schema=${schema}
 export.torque.database.user=${user}
