*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5138 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
 	
 	<target name="delete-database-project" depends="init-database-properties">
 		<delete dir="${working.directory}/${application.database.cvs.module}" />
+		<delete file="${user.home}/impex-build.properties" />
 	</target>
 	
 	<target name="update-database-project" depends="checkout-database-project">
