--- a/build.properties
+++ b/build.properties
@@ -24,6 +24,6 @@ oracle.usermaint.user=SYSTEM
 oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${user}' ); END;
 oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${user}', '${password}' ); END;
 oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${user}' ); END;
-mysql.create.user.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n/\nGRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
+mysql.create.user.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n\/\n\GRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n\/
 mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
 mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${schema}
