--- a/impex-build.properties
+++ b/impex-build.properties
@@ -29,5 +29,5 @@ oracle.create.user.commands=${oracle.create.user.commands}
 oracle.empty.schema.commands=${oracle.empty.schema.commands}
 
 mysql.create.user.commands=${mysql.create.user.commands}
-mysql.create.schema.commands=${mysql.create.schema.commands}
+mysql.create.schema.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n/\nGRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
 mysql.drop.schema.commands=${mysql.drop.schema.commands}
