*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5145 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build.properties
+++ b/impex-build.properties
@@ -28,6 +28,6 @@ oracle.drop.user.commands=${oracle.drop.user.commands}
 oracle.create.user.commands=${oracle.create.user.commands}
 oracle.empty.schema.commands=${oracle.empty.schema.commands}
 
-mysql.create.user.commands=${mysql.create.user.commands}
-mysql.create.schema.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n/\nGRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
+mysql.create.user.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n/\nGRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
+mysql.create.schema.commands=${mysql.create.schema.commands}
 mysql.drop.schema.commands=${mysql.drop.schema.commands}
