*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5146 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 		<delete>
 			<fileset dir="${working.directory}/${torque.working.directory}" includes="${application.database.xml},${application.database.docs}.css,${application.database.docs}.html,${application.database.incremental.file}" />
 		</delete>
-		<ant antfile="${impex.build.file}" target="export" />
+		<ant antfile="${impex.build.file}" target="export" inheritall="false" />
 		<cvs command="add ${working.directory}/${application.database.xml}" />
 		<cvs command="add ${working.directory}/${application.database.docs}" />
 		<echo message="" file="${working.directory}/${application.database.incremental.file}" />
@@ -45,8 +45,8 @@
 	</target>
 
 	<target name="update-database" depends="checkout-database-project">
-		<ant antfile="${impex.build.file}" target="empty-schema" />
-		<ant antfile="${impex.build.file}" target="import" />
+		<ant antfile="${impex.build.file}" target="empty-schema" inheritall="false" />
+		<ant antfile="${impex.build.file}" target="import" inheritall="false" />
 	</target>
 
 	<target name="export" depends="update-database-project,delete-database-project" />
