*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5147 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build.properties
+++ b/impex-build.properties
@@ -3,6 +3,7 @@ drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 target.zip=../kuldemo.zip
 source.zip=../kuldemo.zip
+output.dir=../${torque.project}
 
 export.torque.database=${export.torque.database}
 export.torque.database.driver=${export.torque.database.driver}
