*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5149 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex-build.properties
+++ b/impex-build.properties
@@ -1,33 +1,35 @@
-torque.project=mds
+torque.project=${working.directory}/${torque.working.directory}
 drivers.directory=/usr/local/tomcat/kuali/common/lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
-target.zip=../kuldemo.zip
-source.zip=../kuldemo.zip
-output.dir=../${torque.project}
+target.zip=/tmp/kuldemo.zip
+source.zip=/tmp/kuldemo.zip
+output.dir=${torque.project}
+
+# uncomment this to skip some of the larger (and mostly unnecessary) tables in the system
+# import.exclude.data.pattern=LD_LDGR_ENTR_T.xml,GL_BALANCE_T.xml,GL_ENTRY_T.xml,LD_LDGR_BAL_T.xml,GL_ACCT_BALANCES_T.xml
 
 export.torque.database=${export.torque.database}
 export.torque.database.driver=${export.torque.database.driver}
 export.torque.database.url=${export.torque.database.url}
-export.torque.database.user=${export.torque.database.user}
-export.torque.database.schema=${export.torque.database.schema}
-export.torque.database.password=${export.torque.database.password}
+export.torque.database.schema=${schema}
+export.torque.database.user=${user}
+export.torque.database.password=${password}
 
 import.torque.database=${import.torque.database}
 import.torque.database.driver=${import.torque.database.driver}
 import.torque.database.url=${import.torque.database.url}
-import.torque.database.user=${import.torque.database.user}
-import.torque.database.schema=${import.torque.database.schema}
-import.torque.database.password=${import.torque.database.password}
+import.torque.database.schema=${schema}
+import.torque.database.user=${user}
+import.torque.database.password=${password}
 
 import.admin.user=${import.admin.user}
 import.admin.password=${import.admin.password}
 import.admin.url=${import.admin.url}
 
-oracle.usermaint.user=${oracle.usermaint.user}
-oracle.drop.user.commands=${oracle.drop.user.commands}
-oracle.create.user.commands=${oracle.create.user.commands}
-oracle.empty.schema.commands=${oracle.empty.schema.commands}
-
+oracle.usermaint.user=SYSTEM
+oracle.drop.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.drop_user( '${user}' ); END;
+oracle.create.user.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.create_user( '${user}', '${password}' ); END;
+oracle.empty.schema.commands=DECLARE temp NUMBER; BEGIN temp := ${oracle.usermaint.user}.kuluser_maint_pk.recreate_user( '${user}' ); END;
+mysql.drop.schema.commands=DROP DATABASE IF EXISTS ${schema}
 mysql.create.user.commands=CREATE USER '${user}'@'localhost' IDENTIFIED BY PASSWORD '${password}'\n/\nGRANT ALL ON ${schema}.* TO '${user}'@'localhost' WITH GRANT OPTION\n/
-mysql.create.schema.commands=${mysql.create.schema.commands}
-mysql.drop.schema.commands=${mysql.drop.schema.commands}
+mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'
