--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,7 @@
 	
 	<target name="delete-database-project" depends="init-database-properties">
 		<delete dir="${working.directory}/${application.database.cvs.module}" />
+		<delete file="${working.directory}/velocity.log" />
 	</target>
 	
 	<target name="update-database-project" depends="checkout-database-project">
