--- a/build.xml
+++ b/build.xml
@@ -37,7 +37,7 @@
 			<fileset dir="${working.directory}/${torque.working.directory}" includes="${application.database.xml},${application.database.docs}.css,${application.database.docs}.html,${application.database.incremental.file}" />
 		</delete>
 		<ant antfile="${impex.build.file}" target="export" inheritall="false" />
-		<property name="cvs.project.directory" value="${working.directory}/${application.database.cvs.module}" />
+		<property name="cvs.project.directory" value="${working.directory}/${torque.working.directory}" />
 		<cvs command="add ${cvs.project.directory}/${application.database.xml}" />
 		<cvs command="add ${cvs.project.directory}/${application.database.docs}" />
 		<echo message="" file="${cvs.project.directory}/${application.database.incremental.file}" />
