--- a/build.xml
+++ b/build.xml
@@ -37,13 +37,9 @@
 			<fileset dir="${working.directory}/${torque.working.directory}" includes="${application.database.xml},${application.database.docs}.css,${application.database.docs}.html,${application.database.incremental.file}" />
 		</delete>
 		<ant antfile="${impex.build.file}" target="export" inheritall="false" />
-		<property name="cvs.project.directory" value="${working.directory}/${torque.working.directory}" />
-		<cvs command="add ${cvs.project.directory}/${application.database.xml}" />
-		<cvs command="add ${cvs.project.directory}/${application.database.docs}" />
-		<echo message="" file="${cvs.project.directory}/${application.database.incremental.file}" />
-		<cvs command="add ${cvs.project.directory}/${application.database.incremental.file}" />
-		<cvs command="update ${cvs.project.directory}" />
-		<cvs command="commit -m 'daily export' ${cvs.project.directory}" />
+		<echo message="" file="${working.directory}/${torque.working.directory}/${application.database.incremental.file}" />
+		<cvs command="update ${working.directory}/${torque.working.directory}" />
+		<cvs command="commit -m 'daily export' ${working.directory}/${torque.working.directory}" />
 	</target>
 
 	<target name="update-database" depends="checkout-database-project">
